Add auto instrumentation for RabbitMQ
This commit adds profiler auto instrumentation for RabbitMQ.
The instrumentation follows the messaging spec and aligns with
the Elastic APM Java agent implementation.

The following RabbitMQ.Client operations are instrumented:

- BasicGet

  Creates POLL spans if there is an active transaction

- BasicPublish

  Creates SEND spans if there is an active transaction

- HandleBasicDeliver in EventingBasicConsumer

  Creates RECEIVE transactions around the message
  processing flow

Trace Context is propagated through message headers
for distributed tracing.

Closes #1223

--- a/docs/integrations.asciidoc
+++ b/docs/integrations.asciidoc
@@ -34,6 +34,10 @@
 | Oracle.ManagedDataAccess
 | 2.0.0 - 2.{star}.{star}
 
+| RabbitMQ
+| RabbitMQ.Client
+| 3.6.9 - 6.{star}.{star}
+
 | SqlCommand
 | System.Data
 | 4.0.0 - 4.{star}.{star}
