--- a/docs/setup-auto-instrumentation.asciidoc
+++ b/docs/setup-auto-instrumentation.asciidoc
@@ -53,9 +53,13 @@ The version number of NuGet packages referenced by a project instrumented with a
 must be the same as the version number of profiler zip file used.
 --
 
-Steps:
+[float]
+==== General steps
 
-. Download the `elastic-apm-dotnet-auto-instrumentation-<version>.zip` file from the https://github.com/elastic/apm-agent-dotnet/releases[Releases] page of the .NET APM Agent GitHub repository, where `<version>` is the version number to download. You can find the file under Assets.
+The general steps in configuring profiler auto instrumentation are as follows; 
+See <<instrumenting-containers-and-services>> for configuration for common deployment environments.
+
+. Download the `elastic_apm_profiler_<version>.zip` file from the https://github.com/elastic/apm-agent-dotnet/releases[Releases] page of the .NET APM Agent GitHub repository, where `<version>` is the version number to download. You can find the file under Assets.
 . Unzip the zip file into a folder on the host that is hosting the application to instrument.
 . Configure the following environment variables
 +
@@ -100,9 +104,10 @@ With this setup, the .NET runtime loads Elastic's CLR profiler into the .NET pro
 in application startup. The profiler monitors methods of interest and injects code to instrument their execution.
 
 [float]
+[[instrumenting-containers-and-services]]
 === Instrumenting containers and services
 
-Using global environment variables causes the Elastic profiler auto instrumentation to be loaded for **any** .NET process started on the
+Using global environment variables causes profiler auto instrumentation to be loaded for **any** .NET process started on the
 host. Often, the environment variables should be set only for specific services or containers. The following sections demonstrate how to configure common containers and services.
 
 [float]
@@ -271,10 +276,12 @@ by creating an environment.env file containing the following
 ----
 CORECLR_ENABLE_PROFILING=1
 CORECLR_PROFILER={FA65FE15-F085-4681-9B20-95E04F6C03CC}
-CORECLR_PROFILER_PATH=/elastic-apm-dotnet-auto-instrumentation/libelastic_apm_profiler.so
-ELASTIC_APM_PROFILER_HOME=/elastic-apm-dotnet-auto-instrumentation
-ELASTIC_APM_PROFILER_INTEGRATIONS=/elastic-apm-dotnet-auto-instrumentation/integrations.yml
+CORECLR_PROFILER_PATH=/<unzipped directory>/libelastic_apm_profiler.so <1>
+ELASTIC_APM_PROFILER_HOME=/<unzipped directory>
+ELASTIC_APM_PROFILER_INTEGRATIONS=/<unzipped directory>/integrations.yml
 ----
+<1> `<unzipped directory>` is the directory to which the zip file
+was unzipped
 
 Then adding an https://www.freedesktop.org/software/systemd/man/systemd.service.html#Command%20lines[`EnvironmentFile`] entry to the service's configuration file
 that references the path to the environment.env file
