--- a/docs/integrations.asciidoc
+++ b/docs/integrations.asciidoc
@@ -33,6 +33,10 @@
 |{nuget}/Oracle.ManagedDataAccess.Core[Oracle.ManagedDataAccess.Core 2.0.0 - 2.{star}.{star}]
 |Oracle.ManagedDataAccess 2.0.0 - 2.{star}.{star}
 
+.1+|RabbitMQ
+|{nuget}/RabbitMQ.Client[RabbitMQ.Client 3.6.9 - 6.{star}.{star}]
+|RabbitMQ.Client 3.6.9 - 6.{star}.{star}
+
 .3+.^|SqlCommand
 |part of .NET
 |System.Data 4.0.0 - 4.{star}.{star}
