Prepare for 1.12.0 release

--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -157,6 +157,10 @@ We support automatic instrumentation for the following messaging systems
 |See profiler documentation
 |<<setup-auto-instrumentation, Profiler auto instrumentation>>
 
+|RabbitMQ added[1.12]
+|See profiler documentation
+|<<setup-auto-instrumentation, Profiler auto instrumentation>>
+
 |===
 
 [float]
